# DeepRL-RecSys-Platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  data_debug.txt  eval_debug.txt  inference_comparison.json  pyproject.toml  requirements.txt  run_benchmarks.ps1  streamlit_app.py  test_results.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/checkpoints/: model.pt  ope_report.json  ope_report.md  train_log.json
artifacts/models/benchmark_dqn_synthetic/: config.yaml  metadata.json
artifacts/models/benchmark_ppo_synthetic/: metadata.json
artifacts/models/benchmark_random/: metadata.json
artifacts/models/benchmark_synthetic/: metadata.json
configs/: default.yaml  example_full_config.yaml  serving.yaml
configs/agents/: dqn.yaml  ppo.yaml  sac.yaml
configs/datasets/: movielens.yaml  obd_bts_all.yaml  obd_random_all.yaml  obd_random_men.yaml  obd_random_women.yaml  rl4rs.yaml  synthetic.yaml
configs/environment/: rec_env.yaml
configs/experiments/: exp1_dqn_movielens.yaml  exp2_ppo_synthetic.yaml  exp_benchmark_bts.yaml  exp_benchmark_random.yaml  exp_benchmark_synthetic.yaml  exp_dqn_bts.yaml  exp_dqn_random.yaml  exp_dqn_synthetic.yaml  exp_obd_sac_real.yaml  exp_ppo_bts.yaml  exp_ppo_random.yaml  exp_ppo_synthetic.yaml  exp_sac.yaml  sac_verification.yaml
configs/simulators/: llm.yaml  static.yaml
data/sample/: obd_random_sample.parquet
docs/benchmarks/: Agents_Comparison.md  Full_Benchmark_Report.md  SAC_Full_Report.md
docs/source/: conf.py
docs/source/api/: index.rst
examples/: advanced_ope_analysis.ipynb  demo_train_eval_serve.ipynb
pipelines/: evaluate.py  export.py  prepare_data.py  serve.py  train.py
reports/: agent_verification.md  data_validation.md  policies.md  sensitivity_analysis.md  significance_tests.md
reports/model_cards/: dqn_model_card.md  ppo_model_card.md  sac_model_card.md
scripts/: calibrate_simulator.py  create_notebook.py  diagnose_context_sensitivity.py  download_movielens.sh  generate_benchmark_viz.py  generate_comparison_report.py  plot_learning_curves.py  prepare_obd.py  run_all_agents_benchmark.py  run_full_benchmark.py  sensitivity_test.py  simulate_benchmark.py  test_model_inference.py  verify_playground_scores.py
src/deeprl_recsys/: __init__.py  cli.py
src/deeprl_recsys/agents/: __init__.py  base.py  baselines.py  dqn.py  ppo.py  sac.py
src/deeprl_recsys/core/: __init__.py  artifacts.py  builtins.py  config.py  exceptions.py  logging.py  plugin_loader.py  registry.py  schema.py  seeding.py  types.py  validators.py
src/deeprl_recsys/data_pipeline/: __init__.py  io.py  splits.py  transforms.py  validation.py
src/deeprl_recsys/environment/: __init__.py  base.py  gym_wrappers.py
src/deeprl_recsys/evaluation/: __init__.py  metrics.py  report.py
src/deeprl_recsys/explainability/: __init__.py  attention_maps.py  base.py
src/deeprl_recsys/serving/: __init__.py  app.py  deps.py  middleware.py  runtime.py  schemas.py
src/deeprl_recsys/training/: __init__.py  callbacks.py  manager.py  trainer.py
src/deeprl_recsys/ui/: __init__.py  app.py  utils.py
tests/: __init__.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: movielens_stub.py
tests/fixtures/tiny_artifact/: checksums.txt  (+3 more)
tests/integration/: test_advanced_agents.py  test_llm_sim.py  test_pipeline_short.py
tests/smoke/: test_serving_smoke.py
tests/training/: test_callbacks.py
(+31 files in other folders)
